修复基于LiftPanelBase且占两格的部件右半部分无法连接的问题